@@ -1,6 +1,6 @@
 #ifndef _COMMCTRL_H
 #define _COMMCTRL_H
-#if __GNUC__ >=3
+#if __GNUC__ >= 3
 #pragma GCC system_header
 #endif
 
@@ -631,6 +631,13 @@ extern "C" {
 #define TBM_GETCHANNELRECT	(WM_USER+26)
 #define TBM_SETTHUMBLENGTH	(WM_USER+27)
 #define TBM_GETTHUMBLENGTH	(WM_USER+28)
+#define TBM_SETTOOLTIPS	(WM_USER+29)
+#define TBM_GETTOOLTIPS	(WM_USER+30)
+#define TBM_SETTIPSIDE	(WM_USER+31)
+#define TBM_SETBUDDY	(WM_USER+32)
+#define TBM_GETBUDDY	(WM_USER+33)
+#define TBM_GETUNICODEFORMAT	CCM_GETUNICODEFORMAT 
+#define TBM_SETUNICODEFORMAT	CCM_SETUNICODEFORMAT
 #define TB_LINEUP	0
 #define TB_LINEDOWN	1
 #define TB_PAGEUP	2
